# ohms_law_pk

./: .gitignore  LICENSE  ohms_law.py  setup.cfg
ohms_law.egg-info/: PKG-INFO  SOURCES.txt
ohms_law_pk.egg-info/: PKG-INFO
