[metadata]
name = ohms_law
version = 0.1
author = Pavan Kannan
author_email = pkannan@students.kennesaw.edu
description = ohms Law calulator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PavanKannan/ohms_law_pk

classifiers = 
    Programing Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operation System :: OS Independent

[options]
packages = find:
python_requires = >=3.2
include_package_data = False